# floorplanning

./: .gitignore  CHANGELOG.md  README.md  TODO.md  default.nix  floorplanning.cabal  hie.yaml  stack.yaml  todo.md
.github/workflows/: ci.yml
app/: Config.hs  Demo.hs  Main.hs
examples/: example_10_modules  example_20_modules
nix/: nixpkgs.json
slides/: Makefile  slides.tex
slides/figures/: demo.wmv
src/: Floorplan.hs  Lib.hs  PolishExpression.hs
src/Floorplan/: PolishExpression.hs  Pretty.hs  Problem.hs  Report.hs  SimulatedAnnealing.hs  SlicingTree.hs  Types.hs
src/Lib/: Internal.hs  PolishExpression.hs  Pretty.hs  SimulatedAnnealing.hs  SlicingTree.hs
test/: Spec.hs
test/Test/: PolishExpression.hs  Pretty.hs  Problem.hs  SimulatedAnnealing.hs
test/resources/failure/: example_0
test/resources/successful/: example_0  example_1
