cabal-version:       >= 1.10

name:                floorplanning
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
author:              Arnau Abella
maintainer:          arnauabella@gmail.com
copyright:           2021 Arnau Abella
homepage:            https://github.com/monadplus/floorplanning
bug-reports:         https://github.com/monadplus/floorplanning/issues
synopsis:
description:
category:
extra-source-files:  README.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/monadplus/floorplanning.git

Executable floorplanning
  default-language:      Haskell2010
  main-is:               Main.hs
  hs-source-dirs:        app

  build-depends:         floorplanning,
                         base        >=4.12     && <4.15,
                         containers  >=0.5.0.1  && <0.7

  ghc-options:           -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

Library
  default-language:   Haskell2010
  hs-source-dirs:     src

  -- TODO move to exposed-modules
  exposed-modules:    Floorplan
                      Floorplan.PolishExpression
                      Floorplan.Pretty
                      Floorplan.SimulatedAnnealing
                      Floorplan.SlicingTree

  -- other-modules:

  build-depends:      base           >=4.12     && <4.15,
                      bytestring     >=0.10.8.2 && <0.11.0.0,
                      containers     >=0.5.0.1  && <0.7,
                      deepseq        >=1.4      && <1.5,
                      generic-lens   >=2.0.0.0  && <2.1.0.0,
                      matrix         >=0.3.6.0  && <0.3.7.0,
                      microlens      >=0.4.11   && <0.4.12,
                      microlens-mtl  >=0.2      && <0.3,
                      microlens-th   >=0.4.3    && <0.4.4,
                      mtl            >=2.2.0    && <2.3,
                      mwc-random     >=0.15.0.0 && <0.16.0.0,
                      time           >=1.9      && <1.10,
                      text           >=1.2.3.0  && <2.0.0.0,
                      vector         >=0.11.0.0 && <0.13.0.0

  ghc-options:        -Wall
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wcompat
                      -Widentities
                      -Wredundant-constraints
                      -Wpartial-fields
                      -fhide-source-paths
                      -freverse-errors
                      -Wno-name-shadowing
  if impl(ghc >= 8.8.1)
    ghc-options:      -Wmissing-deriving-strategies
                      -Werror=missing-deriving-strategies
                      -Werror=unused-matches

Test-suite floorplanning-tests
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test

  other-modules: Test.PolishExpression
                 Test.SimulatedAnnealing

  build-depends:        floorplanning,
                        base              >=4.12     && <4.15,
                        containers        >=0.5.0.1  && <0.7,
                        hspec             >=2.6.0    && <2.8,
                        hspec-core        >=2.6.0    && <2.8,
                        QuickCheck        >=2.14     && <2.15

  ghc-options:          -Wall
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wcompat
                        -Widentities
                        -Wredundant-constraints
                        -Wpartial-fields
                        -fhide-source-paths
                        -freverse-errors
  if impl(ghc >= 8.8.1)
    ghc-options:        -Wmissing-deriving-strategies
                        -Werror=missing-deriving-strategies

Benchmark floorplanning-bench
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Benchmark.hs

  build-depends:  floorplanning,
                  base      >=4.12     && <4.15,
                  gauge     >=0.2.4    && <0.3

  ghc-options:    -Wall
                  -Wincomplete-record-updates
                  -Wcompat
                  -Widentities
                  -Wredundant-constraints
                  -Wpartial-fields
                  -fhide-source-paths
                  -freverse-errors

                  -O2
                  -threaded
                  -rtsopts
                  -with-rtsopts=-N
  if impl(ghc >= 8.8.1)
    ghc-options:  -Wmissing-deriving-strategies
                  -Werror=missing-deriving-strategies
